# radioplatform

./: .env.example  .gitignore  CLAUDE.md  Makefile  docker-compose.yml  render.yaml
.github/workflows/: ci.yml
backend/: alembic.ini  nixpacks.toml  pyproject.toml  railway.toml  requirements.txt  start.sh  start_worker.py
backend/alembic/: env.py
backend/alembic/versions/: 001_initial_schema.py
backend/api/: index.py
backend/app/: config.py  main.py
backend/app/core/: dependencies.py  exceptions.py  middleware.py  security.py
backend/app/data/: jewish_songs.py
backend/app/db/: base.py  engine.py  session.py
backend/app/models/: __init__.py  ad_campaign.py  alert.py  asset.py  asset_type.py  audit_log.py  call_in_request.py  category.py  channel_stream.py  crm_member.py  holiday_window.py  invoice.py  live_show.py  (+22 more)
backend/liquidsoap/: radio.liq
backend/loadtests/: locustfile.py
backend/scripts/: reclassify_stories.py  seed.py  seed_sample_music.py  setup_programming.py
backend/tests/: conftest.py  test_assets.py  test_auth.py  test_health.py  test_holidays.py  test_media_service.py  test_mpeg_conversion.py  test_schedules.py  test_sponsors.py  test_stations.py
bot/: .env.example  main.py  pyproject.toml
docker/: backend.Dockerfile  frontend.Dockerfile  nginx.conf
docs/: API.md
frontend/: index.html  package-lock.json  package.json  tailwind.config.js  vite.config.ts
frontend/src/: App.tsx
infra/streaming/: icecast.xml  liquidsoap.service  nginx-stream.conf  radio.liq  setup.sh
infra/terraform/: main.tf  variables.tfvars.example
(+219 files in other folders)
